[gd_scene load_steps=17 format=3 uid="uid://csv175scbfsvp"]

[ext_resource type="Texture2D" uid="uid://ehwemx4crvj1" path="res://Assets/Stages/02/Enemies/queen2_0002.png" id="1_5bwls"]
[ext_resource type="Script" path="res://Scenes/Stages/Stage2/Enemies/queen_2.gd" id="1_nojp5"]
[ext_resource type="PackedScene" uid="uid://c0t0adqbqm15m" path="res://Scenes/Stages/Stage2/egg_2.tscn" id="2_bkh5o"]
[ext_resource type="Texture2D" uid="uid://gwxym3dmuy3d" path="res://Assets/Stages/02/Enemies/queen2_0001.png" id="2_mx3x6"]
[ext_resource type="Texture2D" uid="uid://ba3ajkj7410ni" path="res://Assets/Stages/02/Enemies/queen2_0003.png" id="3_6x4hp"]
[ext_resource type="Texture2D" uid="uid://s5x1ds7pl6em" path="res://Assets/Stages/02/Enemies/queen2_0004.png" id="4_385jx"]
[ext_resource type="Texture2D" uid="uid://bde2o8rej2dvn" path="res://Assets/Stages/02/Enemies/queen2_0005.png" id="5_iqxim"]
[ext_resource type="Texture2D" uid="uid://deoka63rudjh0" path="res://Assets/Stages/02/Enemies/queen2_0006.png" id="6_thj5v"]
[ext_resource type="Texture2D" uid="uid://bfvxdd70b48xx" path="res://Assets/Stages/02/Enemies/queen2_0007.png" id="7_18dti"]
[ext_resource type="Texture2D" uid="uid://b6opjng4u74ne" path="res://Assets/Stages/02/Enemies/queen2_0008.png" id="8_jexwy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oeb76"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mx3x6")
}, {
"duration": 1.0,
"texture": ExtResource("1_5bwls")
}, {
"duration": 1.0,
"texture": ExtResource("3_6x4hp")
}, {
"duration": 1.0,
"texture": ExtResource("4_385jx")
}, {
"duration": 1.0,
"texture": ExtResource("5_iqxim")
}, {
"duration": 1.0,
"texture": ExtResource("6_thj5v")
}, {
"duration": 1.0,
"texture": ExtResource("7_18dti")
}, {
"duration": 1.0,
"texture": ExtResource("8_jexwy")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xgxul"]
radius = 38.0

[sub_resource type="Animation" id="Animation_u0pwb"]
resource_name = "Walking"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(15, -23), Vector2(15, -15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.26, 0.26), Vector2(0.26, 0.22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(15, -23), Vector2(15, -15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.26, 0.26), Vector2(0.26, 0.22)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53wb1"]
_data = {
"Walking": SubResource("Animation_u0pwb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nnvpg"]
radius = 89.9142
height = 308.772

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a6v72"]
radius = 122.225
height = 324.503

[node name="Queen2" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 25
collision_mask = 25
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_nojp5")
egg = ExtResource("2_bkh5o")

[node name="EnemySprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(15, -23)
scale = Vector2(0.26, 0.26)
texture = ExtResource("1_5bwls")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(15, -23)
scale = Vector2(0.26, 0.26)
sprite_frames = SubResource("SpriteFrames_oeb76")
frame_progress = 0.436541

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_xgxul")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_53wb1")
}

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="EggTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false
position = Vector2(15, -23)
scale = Vector2(0.26, 0.26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-53.8462, 103.846)
rotation = -1.27409
shape = SubResource("CapsuleShape2D_nnvpg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(65.3846, -73.0769)
rotation = -2.73144
shape = SubResource("CapsuleShape2D_a6v72")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="EggTimer" to="." method="_on_egg_timer_timeout"]
